crates/cli/src/snapshots/sanic_review__tui__tests__r_reviews_a_skipped_pr_anyway.snap
---
source: crates/cli/src/tui.rs
expression: "draw(&mut app, 80, 24).backend()"
---
"┌ Reviews you owe (5) ─────────────────────────────────────────────────────────┐"
"│drafted        3 drafts https://github.com/org/api/pull/481  Retry webhook del│"
"│skipped: title          https://github.com/org/api/pull/490  build(deps): bump│"
"│queued                  https://github.com/org/web/pull/77  Fix login flake (b│"
"│waiting 1:40            https://github.com/org/web/pull/78  Bump serde (dana) │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Your PRs (2 · 1 archived) ───────────────────────────────────────────────────┐"
"│changes                 https://github.com/org/api/pull/470  Speed up search  │"
"│waiting                 https://github.com/org/web/pull/80  [draft] New settin│"
"│        ┌ Review now ────────────────────────────────────────────────┐        │"
"│        │ Review this title-skipped PR anyway,                       │        │"
"└────────│ https://github.com/org/api/pull/490                        │────────┘"
"┌ Activit│ at its current head? This spends tokens.                   │────────┐"
"│16:36:00│                                                            │out of b│"
"│16:35:10│ y review now · any other key cancels                       │        │"
"│16:33:02└────────────────────────────────────────────────────────────┘        │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Log ─────────────────────────────────────────────────────────────────────────┐"
"│16:33:00  INFO watching GitHub user=me                                        │"
"│16:35:10  INFO refresh{url=https://github.com/org/api/pull/481}: summary      │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" ? help · q quit                        1 queued · 0 running · 3 pending drafts "
