crates/cli/src/snapshots/sanic_review__tui__tests__renders_at_80_columns.snap
---
source: crates/cli/src/tui.rs
expression: "draw(&mut app(false), 80, 24).backend()"
---
"┌ Reviews you owe (3) ─────────────────────────────────────────────────────────┐"
"│drafted   3 drafts  https://github.com/org/api/pull/481  Retry webhook deliver│"
"│queued              https://github.com/org/web/pull/77  Fix login flake (bob) │"
"│crashed             https://github.com/org/web/pull/79  Cache avatars (carol) │"
"│          index out of bounds                                                 │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Your PRs (2) ────────────────────────────────────────────────────────────────┐"
"│changes             https://github.com/org/api/pull/470  Speed up search      │"
"│waiting             https://github.com/org/web/pull/80  [draft] New settings p│"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Activity ────────────────────────────────────────────────────────────────────┐"
"│16:36:00  review crashed    https://github.com/org/web/pull/79  index out of b│"
"│16:35:10  review drafted    https://github.com/org/api/pull/481               │"
"│16:33:02  review started    https://github.com/org/api/pull/481               │"
"└──────────────────────────────────────────────────────────────────────────────┘"
"┌ Log ─────────────────────────────────────────────────────────────────────────┐"
"│16:33:00  INFO watching GitHub user=me                                        │"
"│16:35:10  INFO refresh{url=https://github.com/org/api/pull/481}: summary      │"
"│                                                                              │"
"│                                                                              │"
"└──────────────────────────────────────────────────────────────────────────────┘"
" ? help · q quit                        1 queued · 0 running · 3 pending drafts "
